4-k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arthur-excalibur
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: arthur-excalibur
